fixed flicker bug

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -117,10 +117,10 @@ p.overlaytext {
   }
 
   .overlaytext {
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
 
   h3.overlaytext {
-    font-size: 3em;
+    font-size: 1.6em;
   }
 }
